# othello

./: CMakeLists.txt  build.sh  meson.build  model.mnn  model2.mnn  thoughts.txt
src/: board.cpp  board.hpp  gamenn.cpp  gamenn.hpp  input.cpp  input.hpp  main.cpp  muffintest.cpp  nn.cpp  nn.hpp  nnbatch.cpp  nnbatch.hpp  test.cpp  util.cpp  util.hpp
src/ui/: boardui.cpp  boardui.hpp  event.hpp  ui.cpp  ui.hpp
